# opengl

./: CMakeLists.txt  camera.h  main.cpp  mesh.h  model.h  object.cpp  object.h  shader.h  shader.vs  stb_image.cpp  surfaces.cpp  triangulation.cpp
glad/include/glad/: glad.h
glad/src/: glad.c
resources/grass/: grass.mtl
resources/peach/: peach.mtl
